Experience gain from breaking tiles can now be disabled in mod settings.
Added hook for exp reward to N Terraria Utilities mod, for modular quest rewards.